[package]
name = "perf-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization for logging
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Number formatting
num-format = "0.4"

# System calls
libc = "0.2"

# Plotting (SVG output, no system font dependencies)
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series"] }
